--- a/css/style.css
+++ b/css/style.css
@@ -124,28 +124,36 @@
     font-weight: bold;
 }
 .project img{
-    opacity:0.8;
-    filter:alpha(opacity=80);
+    opacity:0.85;
+    filter:alpha(opacity=85);
 }
-.project img:hover{
-    opacity:0.4;
-    filter:alpha(opacity=40);
-}
+
 .project .card{
     /*set center*/
     position: relative;
     display: block;
 }
 .project_btn{
-    background-color:#fff178f1 ;
-    font-family:'Franklin Gothic Medium', Arial;
-    font-size: 20px;
+    background-color: rgba(134, 134, 134, 0.507);
     visibility: hidden;
+    height: 100%;
+    width: 100%;
     /*set center*/
     position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.project_btn a{
+    color: #fff8bb;
+    font-family:'Franklin Gothic Medium', Arial;
+    text-decoration: none;
+    position:absolute;
+    bottom:0;
+    left:0;
+    white-space: normal;
+    word-break:break-all;
+
 }
 
 /* ---Contact--- */
