--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,30 @@ mark{
     left:0;
     white-space: normal;
     word-break:break-all;
-
 }
+@media (max-width: 300px) {
+    .project_btn a h3{
+        font-size:20px !important;
+    }
+    .project_btn a h4{
+        font-size:10px !important;
+    }
+    .project_btn a h6{
+        font-size:5px !important;
+    }
+  }
+@media (max-width: 245px) {
 
+    .project_btn a h3{
+        visibility: hidden;
+    }
+    .project_btn a h4{
+        visibility: hidden;
+    }
+    .project_btn a h6{
+        visibility: hidden;
+    }
+}
 /* ---Contact--- */
 .contact {
     background-color: #ffffff;
